This file is here to allow devs to easily add stuff in the release
notes for the next release, it allows easy syncing with the release
team, since you don't have to be around when the release takes
place...

Just dump whatever you want to have mentioned in the release notes here. Please
take care that it is in a way that allows copy&paste to the release notes. That
is making sure that spelling/grammer/whatever is usable and that you are using
 complete sentences, not just single words.

The release team should empty this file after each release.


The old save option 'Binary Saves' has been replaced with 'Compressed Saves'.
This uses the standard gzip compression. Shadow_Master tested with his savegame 
archive and the following results where found for 687 files:
before 1018.1 MB
after    79.3 MB

There has been more change in the animation engine. The only expected impact is
that mvt anims don't "slow down" on hard to cross terrain anymore. If you had 
specially crafted WML taking that into account, beware.

If the mvt animations seem to "jump around" on slow or fast computers, please report
to Boucman

MP random improvements:
There is a new rand key for [set_variable] this is MP save, only the WML author
has to make sure it stays in sync see:
http://www.wesnoth.org/wiki/BuildingMultiplayerExamples#Random

Units spawned in events can now have random_traits and also the names stay in sync.