@@ -17,6 +17,7 @@ Version 1.3.12+svn:
 
   * Multiplayer
     * Revised maps: Hamlets
+    * Recruitment OOS is fatal now.
 
   * Sound and music
     * New or improved sounds: ogre hit and die.
