@@ -14,6 +14,7 @@ Version 1.3.12+svn:
    * resize actions can be undone again (bug #10216)
  * multiplayer:
    * revised maps: Hamlets
+   * recruitment OOS is fatal now (bug #9723)
  * sound:
    * new or improved sounds: ogre hit and die
  * units:
